# mcp-mortgage-server

./: MIGRATION_GUIDE.md  MODERNIZATION_SUMMARY.md  PR_DESCRIPTION.md  README.md  claude_desktop_config.example.json  main.old.py  pyproject.toml  requirements.modern.txt  requirements.txt  server.modern.py  server.old.py  server.py  setup.py  test_server.py
.github/workflows/: ci.yml
tests/: test_mcp_tools.modern.py
